fix(checkbox): fix checkbox group wrap

--- a/packages/theme/src/checkbox-group/vars.less
+++ b/packages/theme/src/checkbox-group/vars.less
@@ -13,8 +13,8 @@
 .component-css-vars-checkbox-group() {
   // 垂直复选框和行间距(hide)
   --ti-checkbox-group-margin-bottom: var(--ti-common-space-2x);
-  // 默认不换行
-  --ti-checkbox-group-flex-wrap: nowrap;
+  // 默认换行
+  --ti-checkbox-group-flex-wrap: wrap;
   // 按钮组按钮外边距
   --ti-checkbox-group-margin-top: var(--ti-common-space-0);
 }
